@@ -3,6 +3,7 @@
     public class SolutionSettings
     {
         public SolutionSettingsGeneral SolutionSettingsGeneral { get; set; } = new SolutionSettingsGeneral();
+        public SolutionSettingsBuild SolutionSettingsBuild { get; set; } = new SolutionSettingsBuild();
         public SolutionSettingsNugetPush SolutionSettingsNugetPush { get; set; } = new SolutionSettingsNugetPush();
         public SolutionSettingsPublish SolutionSettingsPublish { get; set; } = new SolutionSettingsPublish();
     }
@@ -14,13 +15,19 @@
         public bool NodeReuse { get; set; } = false;
     }
 
-    public class SolutionSettingsPublish
+    public class SolutionSettingsBuild
     {
-        public bool PublishSolutionProject { get; set; } = true;
+        public string AdditionalCommandlineArguments { get; set; } = "--nologo";
     }
+
 
     public class SolutionSettingsNugetPush
     {
         public bool HideApiKeyInOutput { get; set; } = true;
+    }
+
+    public class SolutionSettingsPublish
+    {
+        public bool PublishSolutionProject { get; set; } = true;
     }
 }
